welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:16: error: expected class or object definition
def vuBiscuit():Boolean = {
^